# cairn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  Makefile  README.md  ROADMAP.md  SECURITY.md  TERMS_OF_SERVICE.md  cairn_system_intent.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/entity_resolution/: README.md  benchmark.py
docs/: PRD.md
docs/feedback/: retrieval_ranking_feedback.yaml
docs/patterns/: patterns_entities.yaml  patterns_retrieval_knowledge.yaml
docs/research/context/: AGENT_RETRIEVAL_EVALUATION_RESEARCH_2026.md  CONTEXT_ASSEMBLY_AND_PACKING_RESEARCH_2026.md  CONTEXT_BEATS_MODEL_SEMANTIC_VS_GREP.md  CONTEXT_BUILDING_AND_MAINTENANCE_RESEARCH_2026.md  EMBEDDING_CORPUS_GROWTH_AND_PRECISION.md  EMBEDDING_SIMILARITY_THRESHOLDS_RESEARCH_2026.md  ENTITY_GRAPH_TRAVERSAL_RESEARCH_2026.md  LEXICAL_RETRIEVAL_SIGNAL_RESEARCH_2026.md  ONTOLOGY_AUTHORING_RESEARCH_2026.md  OPENAI_EMBEDDINGS_COMPREHENSIVE_RESEARCH_2026.md  RAG_ROUTING_AND_PARADIGM_SELECTION_2026.md  RETRIEVAL_GATE_COST_MODEL_RESEARCH_2026.md  (+3 more)
examples/: adaptive_gate_demo.py  agent_integration.py  assembler_demo.py  bitemporal_audit.py  blog_graph_demo.py  cross_system_binding.py  full_engine_e2e.py  fusion_demo.py  graph_backend_cypher.py  graph_visualize.py  lexical_signal_demo.py  retrieve_end_to_end.py  schema_connection_suggestion.py  semantic_signal_demo.py  two_backends_identical.py  wordpress_authoring.py  wordpress_corpus_prep.py  wordpress_linking_demo.py  wordpress_m16_links.py  wordpress_ranked_links.py
(+10 files in other folders)
